# link_to_markdown

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/converters/: html_converter.py  markdown_converter.py
src/metadata/: extractor.py
src/models/: document.py  metadata.py
src/utils/: text_utils.py  url_utils.py
