[project]
name = "link-to-markdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "langchain-community>=0.3.9",
    "langchain>=0.3.9",
    "loguru>=0.7.2",
    "markdownify>=0.14.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
