[project]
name = "link-to-markdown"
version = "0.1.0"
description = "Convert web articles to markdown format"
authors = [{ name = "Tommy Lees", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "typing-extensions>=4.5.0",
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "langchain-community>=0.3.9",
    "langchain>=0.3.9",
    "loguru>=0.7.2",
    "markdownify>=0.14.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[project.scripts]
l2m = "src.main:main"

[project.entry-points."pipx.run"]
link-to-markdown = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
